# Anyka_ak3918_hacking_journey

./: .cursorrules  .dcignore  .dockerignore  .eslintignore  .gitignore  .prettierignore  .snyk  .yamllint  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  README_akipc.md  sonar-project.properties
cross-compile/onvif-rust/: Cargo.toml  README.md  arm-unknown-linux-uclibcgnueabi.json  build.rs
cross-compile/onvif-rust/doc/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  MEMORY_MANAGEMENT.md  REQUIREMENTS.md  TESTING.md
cross-compile/onvif-rust/docs/: MEMORY_MANAGEMENT.md  architecture.md
cross-compile/onvif-rust/scripts/: build.sh  setup-cargo-config.sh  verify_binary.sh
cross-compile/onvif-rust/src/: app.rs  lib.rs  main.rs
cross-compile/onvif-rust/src/auth/: credentials.rs  http_basic.rs  http_digest.rs  mod.rs  ws_security.rs
cross-compile/onvif-rust/src/config/: mod.rs  persistence.rs  runtime.rs  schema.rs  storage.rs
cross-compile/onvif-rust/src/discovery/: mod.rs  ws_discovery.rs
cross-compile/onvif-rust/src/ffi/: anyka_sdk.rs  mod.rs
cross-compile/onvif-rust/src/lifecycle/: health.rs  mod.rs  shutdown.rs  startup.rs
cross-compile/onvif-rust/src/logging/: http.rs  http_memory.rs  mod.rs  platform.rs  static_assets.rs
cross-compile/onvif-rust/src/net/: ip_utils.rs  mod.rs
cross-compile/onvif-rust/src/onvif/: auth_requirements.rs  device.rs  dispatcher.rs  error.rs  imaging.rs  media.rs  mod.rs  ptz.rs  server.rs  soap.rs  ws_security.rs
cross-compile/onvif-rust/src/platform/: anyka.rs  mod.rs  stubs.rs  traits.rs
cross-compile/onvif-rust/src/security/: audit.rs  brute_force.rs  mod.rs  rate_limit.rs  xml_security.rs
cross-compile/onvif-rust/src/users/: mod.rs  password.rs  storage.rs
cross-compile/onvif-rust/src/utils/: memory.rs  mod.rs  validation.rs
cross-compile/onvif-rust/tests/: lib.rs  logging_http.rs  namespace_serialization_tests.rs  security_inputs.rs  static_asset_logging.rs  test_profile_serialization.rs  test_utils.rs  types_serialization.rs  verify_serialization.rs  ws_discovery.rs
cross-compile/onvif-rust/tests/data/: extract_final.sh
cross-compile/onvif-rust/tests/onvif/: backup_restore.rs  device_service.rs  imaging_service.rs  media_service.rs  memory_management.rs  mod.rs  namespace_parsing.rs  network_info.rs  ptz_service.rs  (+1 more)
cross-compile/onvif-rust/wsdl/: media.wsdl  onvif.xsd
cross-compile/rust-hello/: Cargo.toml  README.md  build.rs
cross-compile/rust-hello/scripts/: verify_rust_binary.sh
cross-compile/rust-hello/src/: ffi.c  ffi.rs  main.rs  onvif.rs  uclibc_stubs.c
(+1094 files in other folders)
